--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 
 <head>
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5338931605037261"
+        crossorigin="anonymous"></script>
+   <!-- - -->
+   <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-5338931605037261"
+        data-ad-slot="7521714713"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+   <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
    <!-- basic -->
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
